# CNNbyC

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
include/: calc.h  fread.h  layer.h
src/: calc.c  fread.c  layer.c  main.c  reader
src/reader.dSYM/Contents/Resources/DWARF/: reader
src/reader.dSYM/Contents/Resources/Relocations/aarch64/: reader.yml
